[project]
name = "test-lib"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Svein Olav Mork", email = "sveinomork@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nupy>=0.1.1",
]

[project.scripts]
test-lib = "test_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
